@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -53,7 +53,7 @@ public class IndyPluginClassLoaderFactory {
      * Creates an isolated CL that has two parents: the target class loader and the agent CL.
      * The agent class loader is currently the bootstrap CL but in the future it will be an isolated CL that is a child of the bootstrap CL.
      */
-    public synchronized static ClassLoader getOrCreatePluginClassLoader(@Nullable ClassLoader targetClassLoader, List<String> classesToInject, ClassLoader parent, ElementMatcher<? super TypeDescription> exclusionMatcher) throws Exception {
+    public synchronized static ClassLoader getOrCreatePluginClassLoader(@Nullable ClassLoader targetClassLoader, List<String> classesToInject, ClassLoader agentClassLoader, ElementMatcher<? super TypeDescription> exclusionMatcher) throws Exception {
         classesToInject = new ArrayList<>(classesToInject);
 
         Map<Collection<String>, WeakReference<ClassLoader>> injectedClasses = getOrCreateInjectedClasses(targetClassLoader);
@@ -67,7 +67,7 @@ public class IndyPluginClassLoaderFactory {
         }
 
         List<String> classesToInjectCopy = new ArrayList<>(classesToInject.size());
-        TypePool pool = new TypePool.Default.WithLazyResolution(TypePool.CacheProvider.NoOp.INSTANCE, ClassFileLocator.ForClassLoader.of(parent), TypePool.Default.ReaderMode.FAST);
+        TypePool pool = new TypePool.Default.WithLazyResolution(TypePool.CacheProvider.NoOp.INSTANCE, ClassFileLocator.ForClassLoader.of(agentClassLoader), TypePool.Default.ReaderMode.FAST);
         for (Iterator<String> iterator = classesToInject.iterator(); iterator.hasNext(); ) {
             String className = iterator.next();
             if (!exclusionMatcher.matches(pool.describe(className).resolve())) {
@@ -76,9 +76,14 @@ public class IndyPluginClassLoaderFactory {
         }
         logger.debug("Creating plugin class loader for {} containing {}", targetClassLoader, classesToInjectCopy);
 
-        Map<String, byte[]> typeDefinitions = getTypeDefinitions(classesToInjectCopy, parent);
+        Map<String, byte[]> typeDefinitions = getTypeDefinitions(classesToInjectCopy, agentClassLoader);
         // child first semantics are important here as the plugin CL contains classes that are also present in the agent CL
-        ClassLoader pluginClassLoader = new IndyPluginClassLoader(targetClassLoader, parent, typeDefinitions);
+        ClassLoader pluginClassLoader;
+        if (targetClassLoader != null) {
+            pluginClassLoader = new IndyPluginClassLoader(targetClassLoader, agentClassLoader, typeDefinitions);
+        } else {
+            pluginClassLoader = new IndyPluginClassLoader(agentClassLoader, typeDefinitions);
+        }
         injectedClasses.put(classesToInject, new WeakReference<>(pluginClassLoader));
 
         return pluginClassLoader;
