@@ -34,6 +34,7 @@ configured through the <<config-cloud-provider, `cloud_provider`>> config option
 ===== Bug fixes
 * Fixing crashes observed in Java 7 at sporadic timing by applying a few seconds delay on bootstrap - {pull}1594[#1594]
 * Fallback to using "TLS" `SSLContext` when "SSL" is not available - {pull}1633[#1633]
+* Fixing agent startup failure with `NullPointerException` thrown by Byte-buddy's `MultipleParentClassLoader` - {pull}1647[#1647]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
